[ADD] submodule OCA/l10n-usa

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = OCA/sale-workflow
 	url = git@github.com:OCA/sale-workflow.git
 	branch = 13.0
+
+[submodule "OCA/l10n-usa"]
+	path = OCA/l10n-usa
+	url = git@github.com:OCA/l10n-usa.git
+	branch = 13.0
