[ADD] submodule OCA/account-reconcile

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	path = OCA/sale-workflow
 	url = git@github.com:OCA/sale-workflow.git
 	branch = 12.0
+
+[submodule "OCA/account-reconcile"]
+	path = OCA/account-reconcile
+	url = git@github.com:OCA/account-reconcile.git
+	branch = 12.0
