--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 	path = OCA/field-service
 	url = git@github.com:OCA/field-service.git
 	branch = 12.0
+[submodule "OCA/reporting-engine"]
+	path = OCA/reporting-engine
+	url = https://github.com/OCA/reporting-engine
